--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">Simple_Notepad</string>
+    <string name="app_name">Simple Notepad</string>
     <string name="oneNote">NoteView</string>
     <string name="addNoteButton">New note</string>
     <string name="mainHeader">My notes</string>
@@ -9,7 +9,7 @@
     <string name="updateNoteButton">Update note</string>
     <string name="validation">Please fill the title and/or content field</string>
     
-    <!-- createview layout -->
+    <!-- create view layout -->
     <string name="noteTitle">Note\'s title</string>
     <string name="noteContent">Note\'s content</string>
     <string name="saveNoteButton">Save note</string>
